--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
+    "react-syntax-highlighter": "^15.5.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
