--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-MONGODB_URL = mongodb+srv://rnippanikar7:mhtnipp77@cluster0.jlxdzt8.mongodb.net/test
+MONGODB_URL=mongodb+srv://rnippanikar7:mhtnipp77@cluster0.jlxdzt8.mongodb.net/test
+NODE_ENV=development
